plugins {
    id 'java'
    id 'org.springframework.boot' version '3.5.7'
    id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.example'
version = '0.0.1-SNAPSHOT'
description = 'BasicAuth'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

dependencies {
        implementation 'org.springframework.boot:spring-boot-starter-security'
        implementation 'org.springframework.boot:spring-boot-starter-web'
    //Validation
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    runtimeOnly 'com.h2database:h2:2.2.224' // or latest stable
        implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
        runtimeOnly 'com.mysql:mysql-connector-j'
        compileOnly 'org.projectlombok:lombok'
        annotationProcessor 'org.projectlombok:lombok'

        testImplementation 'org.springframework.boot:spring-boot-starter-test'
        testImplementation 'org.springframework.security:spring-security-test'

        implementation 'org.springframework.security:spring-security-core:6.5.6'
        implementation 'org.springframework.security:spring-security-config:6.5.6'


        implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
        runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
        runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'

        //email
//        implementation group: 'org.springframework.boot', name: 'spring-boot-starter-mail', version: '3.2.3'
    implementation 'org.springframework.boot:spring-boot-starter-mail'

    //swagger

//        implementation group: 'org.springdoc', name: 'springdoc-openapi-starter-webmvc-ui', version: '2.6.0'
// Source - https://stackoverflow.com/a/79626647
// Posted by AztecCodes, modified by community. See post 'Timeline' for change history
// Retrieved 2026-01-03, License - CC BY-SA 4.0

//    implementation "org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.6"

    implementation("org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.6")



    //oauth2
        implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'


    runtimeOnly("org.postgresql:postgresql")

//    runtimeOnly 'org.postgresql:postgresql'
}


tasks.named('test') {
    useJUnitPlatform()
}
